# audhd

./: .gitignore  ADHD_UX_IMPROVEMENTS.md  README.md  UX_IMPROVEMENTS.md  add_rich_fields.py  add_scheduled_date.py  add_user_setup_fields.py  capture-progress.yml  capture_open.yml  current.yml  test-multi-user.js  varv.jsx
.playwright-cli/: page-2026-07-21T08-52-28-319Z.yml  page-2026-07-21T08-52-56-797Z.yml  (+28 more)
frontend/: index.html  (+5 more)
varv-server/: .env.example  ARCHITECTURE.md  README.md  alembic.ini  pyproject.toml  varv.db-shm  varv.db-wal
varv-server/evals/: eval_sorteraren.py
varv-server/migrations/: env.py
varv-server/migrations/versions/: 0001_initial.py  486be798e250_add_settings_json_to_user.py  584e514abaeb_add_google_account_oauth_state_and_.py  7f0a785be6ed_add_checkin_and_calibration_tables.py
varv-server/scripts/: create_user.py  debug_connections.py  reset_database.py  run.sh  test_google_oauth_pi.py  test_google_sync.py
varv-server/systemd/: varv.service
varv-server/tests/: conftest.py  test_bootstrap.py  test_capture.py  test_connections.py  test_google_routes.py  test_sync.py
varv-server/varv/: config.py  main.py  schemas.py  utils.py  worker.py
varv-server/varv/a2ui/: __init__.py  catalog.py  messages.py
varv-server/varv/ag_ui/: __init__.py  encoder.py  events.py
varv-server/varv/agents/: core.py
varv-server/varv/api/: ag_ui_routes.py  auth.py  google_routes.py  routes.py
varv-server/varv/db/: engine.py  models.py
varv-server/varv/services/: capture.py  connections.py  google_sync.py  stats.py  sync.py  topics.py  transcribe.py
(+30 files in other folders)
