[project]
name = "varv-server"
version = "0.1.0"
description = "Varv – AuDHD-dagkompanjon: backend med agenter, SQL och KB-Whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.22",
    "pydantic-settings>=2.4",
    "pydantic-ai-slim[anthropic,openai]>=0.0.30",
    "python-multipart>=0.0.9",
    "alembic>=1.13",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
topics = ["bertopic>=0.16", "sentence-transformers>=3.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx>=0.27", "ruff>=0.6", "pydantic-evals>=0.0.30"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.setuptools]
packages = ["varv", "varv.agents", "varv.api", "varv.db", "varv.services", "scripts"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
